--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 @import url('/node_modules/reset-css/reset.css');
 
+body {
+  color: var(--semi-color-text-0);
+  background-color: var( --semi-color-bg-0);
+}
+
 .App {
   text-align: center;
 }
