--- a/src/pages/Login/LoginPage.module.css
+++ b/src/pages/Login/LoginPage.module.css
@@ -1,5 +1,21 @@
 .container{
-  background-color: var(--semi-color-bg-1);
+  /* background-color: var(--semi-color-bg-1); */
+  background-image: url('../../../public/assets/login-bg.png');
+  background-size : cover;
   width           : 100vw;
   height          : 100vh;
+}
+
+
+/* 黑色蒙层，透明度0.8 */
+.mask{
+  position        : absolute;
+  width           : 100%;
+  height          : 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display         : flex;
+  align-items     : center;
+  justify-content : space-evenly;
+  
+
 }
